--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -128,7 +128,7 @@ async rewrites() {
 },
 ```
 
-In the example above, the new `source` route `/my-office` will be rewrite to the existing `destination` route `/office`, which will use the `/office` template but without changing the URL.
+In the example above, the new `source` route `/my-office` will be rewritten to the existing `destination` route `/office`, using the `/office` template without changing the URL.
 In that way, you can use the existing `destination` route `/office` to map this template in the hCMS.
 
 From the version `3.0.X` of the `@faststore/core` package, it's also possible to use the `source` route in the hCMS to map the template.
