feat: Add note regarding custom prefixes when configuring domains in VTEX Account settings

--- a/docs/faststore/docs/go-live/2-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/2-configuring-external-dns.mdx
@@ -1,5 +1,5 @@
 ---
-title: '2. Configuring external DNS'
+title: "2. Configuring external DNS"
 ---
 
 In this guide, you will learn how to configure external domains for your **FastStore** and **VTEX** website. The process involves the following steps:
@@ -51,7 +51,7 @@ Now, you must set up your VTEX account to use the DNS records created in the pre
    ![host-configuration](https://vtexhelp.vtexassets.com/assets/docs/src/account-settings-new___2e13bee3041e8505922a737b94652ca6.png)
 7. Click the **Save** button.
 
-> ⚠️ To ensure the correct functioning of the checkout for all customer access scenarios, all subdomains used by the store must be added to the host list. If the store operates without the `www.` domain, you must include both the `www.` and non-`www.` domains in the Hosts list. This guarantees that the checkout process works seamlessly when customers access the store with or without `www.`.
+> ⚠️ To ensure the correct functioning of the checkout for all customer access scenarios, all subdomains used by the store must be added to the host list. If the store operates without the `www.` domain, you must include both the `www.` and non-`www.` domains in the Hosts list. Likewise, if the store operates with custom prefixes (e.g., `shop.mystore.com`) both domains (`shop.mystore.com` and `mystore.com`) should be added in the list. This guarantees that the checkout process works seamlessly when customers access the store with or without `www.` or any other custom prefix.
 
 ### Step 4 - Associating your custom domain with your FastStore project
 
