--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -24,7 +24,7 @@ For more information on how to create a Catlog, refer to the [Catalog documentat
 
 ## Accessing the FastStore Onboarding app
 
-To access the app, go to the VTEX Admin and navigate to **Storefront / FastStore WebOps**. On the FastStore Onboarding app page, you will find the following options:
+To access the app, go to the VTEX Admin and navigate to **Storefront > FastStore WebOps**. On the FastStore Onboarding app page, you will find the following options:
 
 ![onboarding-overview](https://vtexhelp.vtexassets.com/assets/docs/src/onboarding-welcome___6f555fad8cf8cca100aebbddcc04c950.png)
 
