--- a/docs/faststore/docs/customization/building-sections/overrides/migrating-v1-to-v2.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/migrating-v1-to-v2.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Differences between Section Override v1 and v2'
+title: 'Upgrading from Section Override v1 to v2'
 ---
 
 Section Override v2 allows you to customize the appearance and functionality of existing components in your store. Compared to v1, v2 offers an adaptable approach. We strongly recommend updating your customization methods to use Section Override v2 in your project.
@@ -18,7 +18,7 @@ Section Override v2 allows you to customize the appearance and functionality of 
 
 Check out the main differences related to the code syntax:
 
-- Previously, in Section Override v1, you passed the section name as a string to the `section` key within the `getOverriddenSection` method's overrides object:
+- Previously, in Section Override v1, you defined the override as an object with properties for the section name and component overrides:
 
     ```js
     import { SectionOverride } from "@faststore/core";
@@ -35,7 +35,7 @@ Check out the main differences related to the code syntax:
     export { override };
     ```
 
-- Section Override v2 introduces a clearer syntax. Now you import the section component (e.g., `AlertSection` from `@faststore/core`) and pass it to the `Section` key (uppercase `S`) within the overrides object. This emphasizes the component-based approach of v2.
+- Section Override v2 introduces a more component-centric approach. It directly references the section component (e.g., `AlertSection` from `@faststore/core`) using a dedicated function (`getOverriddenSection`) and builds the override object around it, emphasizing the component being overridden. This shift in v2 promotes clearer code and offers more control during the override creation process.
 
     ```js
     import { AlertSection, getOverriddenSection } from "@faststore/core";  
@@ -50,11 +50,11 @@ Check out the main differences related to the code syntax:
     export default NewAlert;  
     ```
 
-## Updating your project to Section Overrides v2
+## Updating your project to Section Override v2
 
-Make sure your store's `@faststore/core` package is version 3.0.0 or higher to work with Overrides v2. For update instructions, refer to the [release note](https://github.com/vtex/faststore/releases/tag/v3.0.0).
+Make sure your store's `@faststore/core` package is version 3.0.0 or higher to work with Section Override v2. For update instructions, refer to the [release note](https://github.com/vtex/faststore/releases/tag/v3.0.0).
 
-### Review existing overrides
+### Identify existing overrides (v1)
 
 Identify all overrides currently implemented using Overrides v1 (refer to the [Overrides v1](https://developers.vtex.com/docs/guides/faststore/building-sections-overriding-components-and-props) documentation). Once identified, you can keep these v1 overrides as they will continue to work in your project or create new ones using v2.
 
