--- a/docs/faststore/docs/customization/building-sections/overrides/migrating-v1-to-v2.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/migrating-v1-to-v2.mdx
@@ -2,13 +2,13 @@
 title: 'Upgrading from Section Override v1 to v2'
 ---
 
-Section Override v2 allows you to customize the appearance and functionality of existing components in your store. Compared to v1, v2 offers an adaptable approach. We strongly recommend updating your customization methods to use Section Override v2 in your project.
+[Section Override v2](https://developers.vtex.com/docs/guides/faststore/overrides-overview) allows you to customize the appearance and functionality of existing components in your store. Compared to v1, v2 offers an adaptable approach. 
 
-    > ⚠️ If you choose to continue using Section Override v1, please refer to the [Overriding components (v1)](https://developers.vtex.com/docs/guides/faststore/overrides-components-and-props-v1).
+    > ⚠️ We strongly recommend using [Section Override v2](https://developers.vtex.com/docs/guides/faststore/overrides-overview) in favor of [Section Override v1](https://developers.vtex.com/docs/guides/faststore/overrides-components-and-props-v1).
 
 ## Main differences
 
-| Feature                       | Overrides v1                                           | Overrides v2                                                          |
+| Feature                       | Section Override v1                                           | Section Overrides v2                                                          |
 | ----------------------------- | ------------------------------------------------------ | --------------------------------------------------------------------- |
 | Overrides per section         | One override per section.                              | Multiple overrides per section.                                       |
 | Importing Section             | String passed to `section` key.                        | Section component imported and passed to `Section` key (uppercase S). |
@@ -18,7 +18,7 @@ Section Override v2 allows you to customize the appearance and functionality of 
 
 Check out the main differences related to the code syntax:
 
-- Previously, in Section Override v1, you defined the override as an object with properties for the section name and component overrides:
+- In Section Override v1, a section is overridden by specifying the section name and component:
 
     ```js
     import { SectionOverride } from "@faststore/core";
@@ -56,7 +56,7 @@ Make sure your store's `@faststore/core` package is version 3.0.0 or higher to w
 
 ### Identify existing overrides (v1)
 
-Identify all overrides currently implemented using Overrides v1 (refer to the [Overrides v1](https://developers.vtex.com/docs/guides/faststore/building-sections-overriding-components-and-props) documentation). Once identified, you can keep these v1 overrides as they will continue to work in your project or create new ones using v2.
+Identify all overrides currently implemented using [Section Override v1]](https://developers.vtex.com/docs/guides/faststore/building-sections-overriding-components-and-props). Once identified, you can keep these v1 overrides as they will continue to work in your project or create new ones using v2.
 
     > ⚠️ We strongly recommend using Section Override v2 instead of Section Override v1.
 
