Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
@@ -197,7 +197,7 @@ To integrate the section into the [Headless CMS](https://developers.vtex.com/doc
 This schema Adds the new `Custom Buy Button` section to the Headless CMS.
 
 5. Open a new terminal window and log in to your VTEX account by running `vtex login {accountName}`.
-6. run the following command to sync your changes with the Headless CMS:
+6. Run the following command to sync your changes with the Headless CMS:
 
     ```bash
     yarn cms-sync
@@ -210,7 +210,7 @@ This schema Adds the new `Custom Buy Button` section to the Headless CMS.
 
 ### Step 4 - Visualizing the component on the page locally
 
-To see your changes locally you need to set the Headless CMS preview to the development mode. 
+To see your changes locally, set the Headless CMS preview to the development mode. 
 Refer to the [How to preview Headless CMS changes in development mode](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview-preview-changes-in-development-mode) guide for more information.
 
 Once you have set the preview for development mode, you should see your new Buy Button in a Product Details Page (PDP).
