--- a/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
@@ -10,7 +10,7 @@ For example, you may want to replace the current `BuyButton` component from the 
 
 For this guide we will create a custom Buy Button that once you click on it, it displays an `alert` for the customer.
 
-    > ⚠️ Using overrides does not significantly impact performance. FastStore's handling of props and design tokens is designed for good performance. However, your customizations may introduce additional work, so consider overall store performance by checking Lighthouse reports on GitHub logs and Pull Requests.
+    > ⚠️ Using overrides does not significantly impact performance. FastStore's handling of props and design tokens is designed for good performance.
 
 ## Before you begin
 
