--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -131,12 +131,12 @@ async rewrites() {
 In the example above, the new `source` route `/my-office` will be rewritten to the existing `destination` route `/office`, using the `/office` template without changing the URL.
 In that way, you can use the existing `destination` route `/office` to map this template in the hCMS.
 
-From the version `3.0.X` of the `@faststore/core` package, it's also possible to use the `source` route in the hCMS to map the template.
+From the version `3.0.61` of the `@faststore/core` package, it's also possible to use the `source` route in the hCMS to map the template.
 
-Update your store’s `@faststore/core` package to the `3.0.X` by running the following command:
+Update your store’s `@faststore/core` package to the `3.0.61` by running the following command:
 
 ```bash
-yarn add @faststore/core@3.0.X
+yarn add @faststore/core@3.0.61
 ```
 
 ### Main difference between PDP and PLP template selection criteria
