--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -129,7 +129,7 @@ async rewrites() {
 ```
 
 In the example above, the new `source` route `/my-office` will be rewritten to the existing `destination` route `/office`, using the `/office` template without changing the URL.
-In that way, you can use the existing `destination` route `/office` to map this template in the hCMS.
+In that way, you can use the existing `destination` route `/office` to map this template in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview).
 
 From the version `3.0.61` of the `@faststore/core` package, it's also possible to use the `source` route in the hCMS to map the template.
 
