--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -112,6 +112,8 @@ async rewrites() {
 },
 ```
 
+This rewrites the URL `/my-office` to the existing route `/office`, effectively using the `/office` template without modifying the displayed URL. This allows you to map the template in the Headless CMS to the `/office` route.
+
 or
 
 ```js
