--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -114,7 +114,7 @@ async rewrites() {
 
 This rewrites the URL `/my-office` to the existing route `/office`, effectively using the `/office` template without modifying the displayed URL. This allows you to map the template in the Headless CMS to the `/office` route.
 
-or
+2. Alternatively, use the extended format:
 
 ```js
 async rewrites() {
