--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -131,8 +131,7 @@ async rewrites() {
 },
 ```
 
-In the example above, the new `source` route `/my-office` will be rewritten to the existing `destination` route `/office`, using the `/office` template without changing the URL.
-In that way, you can use the existing `destination` route `/office` to map this template in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview).
+This format offers more flexibility for advanced rewrite scenarios.
 
 From the version `3.0.61` of the `@faststore/core` package, it's also possible to use the `source` route in the Headless CMS to map the template. To update your store's `@faststore/core` package to the `3.0.61`, run the following command:
 
