fix: information about installing the app in a personal account

--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -4,8 +4,6 @@ title: 'FastStore WebOps app'
 
 This document provides an overview of the FastStore WebOps app, a tool designed to simplify the process of setting up a store and gives you a clear view of your website's deployments and performance. The app allows you to focus on building your storefront without the hassle of complex configurations.
 
----
-
 ## Before you begin
 
 <Steps>
@@ -21,12 +19,10 @@ Create a Catalog for populating and testing your store with features like produc
 
 For more information on how to create a Catlog, refer to the [Catalog documentation](https://help.vtex.com/en/tracks/catalog-101--5AF0XfnjfWeopIFBgs3LIQ/3rA2tTpIoEXdv2nzC27zxR).
 
-### Have a GitHub organization to create your project's repository
+### Have a GitHub account 
 
-During the FastStore WebOps onboarding, you'll need Admin access to a GitHub organization to install the app and create your project's repository. 
-If you don't have a GitHub organization, create one by following the official [GitHub documentation](https://docs.github.com/pt/organizations/collaborating-with-groups-in-organizations/creating-a-new-organization-from-scratch).
-
-    > ⚠️FastStore WebOps requires a GitHub organization. You cannot install it in a personal account. Make sure you have Admin access to an organization.
+During the FastStore WebOps onboarding, you'll need a GitHub account to install the app and create your project's repository.
+The app can be installed in a [personal account](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github) or in a [GitHub organization](https://docs.github.com/en/organizations/collaborating-with-groups-in-organizations/about-organizations).
 
 </Steps>
 
