fix: information about installing the fs webops app

--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -21,8 +21,8 @@ For more information on how to create a Catlog, refer to the [Catalog documentat
 
 ### Have a GitHub account 
 
-During the FastStore WebOps onboarding, you'll need a GitHub account to install the app and create your project's repository.
-The app can be installed in a [personal account](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github) or in a [GitHub organization](https://docs.github.com/en/organizations/collaborating-with-groups-in-organizations/about-organizations).
+For FastStore WebOps onboarding, you'll need a GitHub account to set up your project. You can use either a [personal account](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github) or a [GitHub organization](https://docs.github.com/en/organizations/collaborating-with-groups-in-organizations/about-organizations).
+If you choose to install the app in a GitHub organization, make sure you have admin access to it.
 
 </Steps>
 
