--- a/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
@@ -71,21 +71,21 @@ After setting up the basic configuration for your store and reviewing it, click 
 
 #### Git Provider
 
-Connect with a GitHub organization of your choice to host the source code of your FastStore project. 
+Connect with a GitHub personal account or organization of your choice to host the source code of your FastStore project. 
 
-    > ⚠️ FastStore WebOps requires a GitHub organization. You cannot install it in a personal account. Make sure you have Admin access to an organization.
+    > ⚠️ If you choose to install the app in a GitHub organization, make sure you have admin access to an organization.
 
-To connect with the GitHub organization, you need to install the FastStore WebOps app in a GitHub organization, by following these steps:
+To connect the FastStore WebOps app with follow these steps:
 
 1. Click `Connect with GitHub`. A new browser tab will open on the side for you to integrate the app with GitHub.
 
     > ⚠️ If you are not logged in to your GitHub account, in the new tab, you will be asked to log in. Then, you can continue to the next step.
 
-2. Once you are logged in to your GitHub account, choose the organization you want to install the app. You will be redirected to the organization **Settings** page on GitHub.
+2. Once you are logged in to your GitHub account, choose the organization or your personal account you want to install the app. You will be redirected to the **Settings** page on GitHub.
 
     > ⚠️ Once you define the GitHub organization, you cannot change it later.
 
-3. In **Repository access**, choose one of the following options: **All repositories from the organization** or **Only select repositories**..
+3. In **Repository access**, choose one of the following options: **All repositories from the organization** or **Only select repositories**.
 
 4. Click `Install`.
 
@@ -97,7 +97,7 @@ The following successful message will appear in the page:
 
 After seeing the success message, close the browser tab and continue the onboarding process in the VTEX Admin.
 
-5. Now that the app is integrated with the organization of your choice, select which repository you want to start the project:
+5. Now that the app is integrated with GitHub, select which repository you want to start the project:
 
     - **New repository:** Create a repository from scratch, in this option, you only need to type a name for the repository, and after clicking `Create`, it will create the repository for you.
 
