Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/managing-performance/overview.mdx
+++ b/docs/faststore/docs/managing-performance/overview.mdx
@@ -2,13 +2,11 @@
 title: "Managing performance"
 ---
 
-# Performance 
-
-In the ecommerce business, the performance of your website direclty impacts the shoppers' experience. It may affect **sales conversion rate**, **user session time**, and other relevant metrics. Every millisecond counts and influences not only the shopper's decision-making process but also your store's website **rank in search engine results**. Therefore, it is crucial to ensure that your website is as fast and performant as possible, achieving **high scores in [Lighthouse](https://developer.chrome.com/docs/lighthouse/overview) audits**.
+In the ecommerce business, the performance of your website directly impacts the shoppers' experience. It may affect **sales conversion rate**, **user session time**, and other relevant metrics. Every millisecond counts and influences not only the shopper's decision-making process but also your store's website **rank in search engine results**. Therefore, it is crucial to ensure that your website is as fast and performant as possible, achieving **high scores in [Lighthouse](https://developer.chrome.com/docs/lighthouse/overview) audits**.
 
 ## Performance slowdowns
 
-As the complexity of your project increases, many factors may slow down your website performance. For this reason, maintaining optimal website performance is a **continuous effort**, which requires some commitments. 
+As the complexity of your project increases, many factors may slow down your website's performance. For this reason, maintaining optimal website performance is a **continuous effort**, which requires some commitments. 
 
 Some points of attention are:
 
