Doc: Updating i-cannot-complete-a-purchase-on-a-faststore-website.mdx

--- a/docs/faststore/docs/troubleshooting/store-performance/i-cannot-complete-a-purchase-on-a-faststore-website.mdx
+++ b/docs/faststore/docs/troubleshooting/store-performance/i-cannot-complete-a-purchase-on-a-faststore-website.mdx
@@ -2,9 +2,9 @@
 title: "I cannot complete a purchase on a FastStore website"
 ---
 
-Tags/Keywords: FastStore, checkout, DNS, SSL
+**Tags/Keywords:** FastStore, checkout, DNS, SSL
 
-When trying to complete a purchase on your FastStore website, you can receive the following error message: `This Connection Is Not Private`
+When trying to complete a purchase on your FastStore website, you may receive the following error message: `This Connection Is Not Private`
 
 ![not-secure-faststore](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@main/docs/faststore/docs/troubleshooting/store-performance/not-secure-faststore.png)
 
@@ -30,6 +30,6 @@ If the error continues, check if your website's `secure` subdomain is pointing t
 3. Choose `CNAME` in the dropdown menu.
 4. Check if the `secure` subdomain is pointing to the `secure.{hostname}.cdn.vtex.com`, as in the example below:
 
-![dns-checker](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@main//docs/faststore/docs/troubleshooting/store-performance/secure-hostname-2.png)
+   ![dns-checker](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@main//docs/faststore/docs/troubleshooting/store-performance/secure-hostname-2.png)
 	
 If the `secure` subdomain is pointing to `secure.{hostname}.cdn.vtex.com` but the problem continues, open a ticket to [VTEX Support](https://help.vtex.com/en/support).
