--- a/docs/faststore/docs/customization/using-themes/components.mdx
+++ b/docs/faststore/docs/customization/using-themes/components.mdx
@@ -8,7 +8,7 @@ seeAlso:
 
 Customize a component's styling using design tokens that align with your store's branding. In this guide, you'll learn how to customize the style of a FastStore component using its local tokens. For this tutorial, we will use the `Listing` variant from the [Price Component](https://developers.vtex.com/docs/guides/faststore/atoms-price).
 
-This is how Prices look like in our current homepage (with the default color black) :
+This is how prices look like in our current homepage (with the default color black) :
 
 ![homepage-prices-default-color-black](https://vtexhelp.vtexassets.com/assets/docs/src/homepage-prices-default___2751f604ab85b1dcfa47c942e318a7cd.png)
 
