Update and rename testing-code-hike.md to testing-code-hike.mdx

--- a/docs/guides/vtex-io/Storefront-Guides/testing-code-hike.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/testing-code-hike.mdx
@@ -18,8 +18,8 @@ Ensure your store has a [Store Theme](https://developers.vtex.com/docs/guides/vt
 
 Check if the [Builders](https://developers.vtex.com/docs/guides/vtex-io-documentation-builders) are properly installed in your Store Theme. You must have at least the following builders configured:
 
-[store builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-builder): Enables the development of Store Framework storefronts.
-[react builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-react-builder): Used to develop apps with [React](https://react.dev/) when your project requires customized frontend solutions. 
+- [store builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-builder): Enables the development of Store Framework storefronts.
+- [react builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-react-builder): Used to develop apps with [React](https://react.dev/) when your project requires customized frontend solutions. 
 
 ## Step by step
 
