--- a/docs/guides/vtex-io/Storefront-Guides/testing-code-hike.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/testing-code-hike.mdx
@@ -190,5 +190,5 @@ Learn how to make it available in the [Deploying a new app version](https://deve
 
 When the process is finished, the component will appear as follows in the live account’s Site Editor:
 
-![custom-component](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@testing-code-hike/ ) | ![schema-custom-component](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@testing-code-hike/ )
+![default-schema](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@testing-code-hike/docs/guides/vtex-io/Storefront-Guides/default-schema.png) | ![custom-component](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@testing-code-hike/docs/guides/vtex-io/Storefront-Guides/custom-component.png)
 :--- | ---: 
